--- a/mysql.yaml
+++ b/mysql.yaml
@@ -5,3 +5,6 @@
   # - roles/mysql/vars/vault.yaml
   roles:
   - mysql
+
+#ansible-playbook -i inventory.ini mysql.yaml --ask-vault-pass or ask from inventory.ini
+#ansible-playbook -i inventory.ini mysql.yaml --vault-password-file /home/ec2-user/mysql_vault_pass
