--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -20,7 +20,7 @@
 - name: connect to mysql server
   community.mysql.mysql_info:
     login_user: root
-    login_password: "{{ lookup('amazon.aws.aws_ssm', '/expense/mysql/mysql_root_password', decrypt=True ) }}"
+    login_password: "{{ lookup('amazon.aws.aws_ssm', '/expense/mysql/mysql_root_password', decrypt=True ) }}" # "{{ mysql_host_password}}" from vault.yaml
     login_host: "{{ mysql_host }}"
   register: mysql_info
   ignore_errors: true
